--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,3 +8,6 @@ Description: A shiny app in R that is a map which allows people to find bookstor
 License: What license is it under?
 Encoding: UTF-8
 LazyData: true
+Suggests: 
+    testthat (>= 3.0.0)
+Config/testthat/edition: 3
