changes in the description

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,7 +3,7 @@ Type: Package
 Title: FindandRateBookstore
 Version: 0.1.0
 Author: Rebekka Cebulla
-Maintainer: Rebekka Cebulla rebekka.cebulla@student.uva.nl
+Maintainer: Rebekka Cebulla <rebekka.cebulla@student.uva.nl>
 Description: A shiny app in R that is a map which allows people to find bookstores close to them. I want to add functions for people to leave comments for their friends about their experience there.
 License: What license is it under?
 Encoding: UTF-8
